--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,62 @@
 	font-size: 10px;
 }
 
+.body-list ,.body-form{
+    color: black;
+    min-height: 600px;
+    background: #ffffff;
+    border-radius: 10px 10px 10px 10px;
+    box-shadow: 1px 1px 5px #2c3e50;
+}
+
+.body-form{
+    padding: 3%;
+}
+
+.body-list-general{
+    color: black;
+}
+
 .nav-info-user .dropdown-menu{
 	min-width: 185px !important;
+}
+
+.headerTable{
+    background: #2c3e50;
+}
+
+.table{
+    font-weight: bold;
+}
+
+.table >thead {
+    font-size: 17px;
+    color: white;
+}
+
+.table tr{
+    border-bottom: 1px solid lightgray;
+}
+
+.table >tbody tr:hover{
+    color: #2c3e50;
+}
+
+.nav-tabs li a{
+    color: #2c3e50 !important;
+    font-size: 16px;
+    font-weight: bolder;
+}
+
+.table caption{
+    color: #2c3e50 !important;
+    font-size: 20px;
+    font-weight: bolder;
+}
+
+.panel-list{
+    border: 1px solid lightgray;
+    min-height: 400px;
+    background: #ffffff;
+    border-radius: 0px 0px 10px 10px;
 }
